# asciify

./: CMakeLists.txt  README.md  vcpkg.json
include/: args.h  asciify.h  utils.h
src/: args.cpp  asciify.cpp  main.cpp  utils.cpp  utils.h
